--- a/index.html
+++ b/index.html
@@ -166,6 +166,7 @@
                 <p class="card-text">Solo bắn súng nhưng mà nó lạ lắm.</p>
                 <div class="d-flex justify-content-between align-items-center">
                   <div class="btn-group">
+                    <a href="SoloShooting.html"><button type="button" class="btn btn-sm btn-outline-secondary">View</button></a>
                     <a href="https://kiga-studio.itch.io/solo-shooting?secret=y1W1iWnmzzMaTGb7W12uf4ozQ4" target="_blank"><button type="button" class="btn btn-sm btn-outline-secondary">Download</button></a>
                   </div>
                   <small class="text-body-secondary">Free</small>
@@ -182,6 +183,7 @@
                 <p class="card-text">Từ tay không đến khám phá vùng đất mới.</p>
                 <div class="d-flex justify-content-between align-items-center">
                   <div class="btn-group">
+                    <a href="ToOtherSide.html"><button type="button" class="btn btn-sm btn-outline-secondary">View</button></a>
                     <a href="https://kiga-studio.itch.io/to-other-side?secret=SMQqMeJ9Xd16sl52AWEK3SJehTw" target="_blank"><button type="button" class="btn btn-sm btn-outline-secondary">Download</button></a>
                   </div>
                   <small class="text-body-secondary">Free</small>
@@ -216,6 +218,7 @@
                 <p class="card-text">Fake Mai Cờ Ráp Beta.</p>
                 <div class="d-flex justify-content-between align-items-center">
                   <div class="btn-group">
+                    <a href="MaiCap.html"><button type="button" class="btn btn-sm btn-outline-secondary">View</button></a>
                     <a href="https://kiga-studio.itch.io/mai-cap?secret=1AGZxeIbiHv7Ax8NqfMYYgvw" target="_blank"><button type="button" class="btn btn-sm btn-outline-secondary">Download</button></a>
                   </div>
                   <small class="text-body-secondary">Free</small>
@@ -285,24 +288,8 @@
                 <p class="card-text">Nếu bị kẹt trong một không gian hẹp và tối cùng một đám zombie thì bạn có thể sống sót được bao lâu ? Thử ngay Zombie Hunter để biết câu trả lời.</p>
                 <div class="d-flex justify-content-between align-items-center">
                   <div class="btn-group">
+                    <a href="ZombieHunter.html"><button type="button" class="btn btn-sm btn-outline-secondary">View</button></a>
                     <a href="https://kiga-studio.itch.io/zombie-hunter?secret=XR3MdPznFBKgdnFD0Ctm5qMjo" target="_blank"><button type="button" class="btn btn-sm btn-outline-secondary">Download</button></a>
-                  </div>
-                  <small class="text-body-secondary">Free</small>
-                </div>
-              </div>
-            </div>
-          </div>
-
-          <div class="col">
-            <div class="card shadow-sm styleHot">
-              <img src="img/justaimandshoot/Screenshot 11-05-2024 223645.jpg" height="225"> 
-              <div class="card-body">
-                <h3 class="text-warning">Just Aim And Shoot</h3>
-                <p class="card-text">Chỉ việc ngắm và bắn. Liệu mọi thứ có đơn giản như vậy ? Thử ngay Just Aim And Shoot.</p>
-                <div class="d-flex justify-content-between align-items-center">
-                  <div class="btn-group">
-                    <a href="https://kiga-studio.itch.io/just-aim-and-shoot?secret=1RzyJGGveRgKypmV1HBlklOYtU" target="_blank"><button type="button" class="btn btn-sm btn-outline-secondary">Download</button></a>
-                    <a href="https://kiga-studio.itch.io/just-aim-and-shoot-web?secret=JeI7goyOc6ypbVqKpPku4p4fqHo" target="_blank"><button type="button" class="btn btn-sm btn-outline-secondary">Play Now</button></a>
                   </div>
                   <small class="text-body-secondary">Free</small>
                 </div>
@@ -318,6 +305,7 @@
                 <p class="card-text">Game bắn súng online đầu tiên. Không chơi được CSGO vs Valo thì tải về chơi cùng anh em cho vui. Tự xét điều kiện thắng vì game này không win được đâu.</p>
                 <div class="d-flex justify-content-between align-items-center">
                   <div class="btn-group">
+                    <a href="TruyKid.html"><button type="button" class="btn btn-sm btn-outline-secondary">View</button></a>
                     <a href="https://kiga-studio.itch.io/truy-kid?secret=h3c0pPvFZDKMpO7NC8X9WXU1XU" target="_blank"><button type="button" class="btn btn-sm btn-outline-secondary">Download</button></a>
                   </div>
                   <small class="text-body-secondary">Free</small>
@@ -387,8 +375,27 @@
                 <p class="card-text">Sinh tồn với một khẩu lục với vô hạn đạn. Liệu bạn sẽ sống được bao lâu ?</p>
                 <div class="d-flex justify-content-between align-items-center">
                   <div class="btn-group">
+                    <a href="SoliderZ.html"><button type="button" class="btn btn-sm btn-outline-secondary">View</button></a>
                     <a href="https://kiga-studio.itch.io/solider-z?secret=9wZUiN8IiJOYxPQFWKyrWKDX5A" target="_blank"><button type="button" class="btn btn-sm btn-outline-secondary">Download</button></a>
                     <a href="https://kiga-studio.itch.io/solider-z-web?secret=egIrjphdP0s7pDTktzWVKTWg0" target="_blank"><button type="button" class="btn btn-sm btn-outline-secondary">Play Now</button></a>
+                  </div>
+                  <small class="text-body-secondary">Free</small>
+                </div>
+              </div>
+            </div>
+          </div>
+
+          <div class="col">
+            <div class="card shadow-sm styleHot">
+              <img src="img/justaimandshoot/Screenshot 11-05-2024 223645.jpg" height="225"> 
+              <div class="card-body">
+                <h3 class="text">Just Aim And Shoot</h3>
+                <p class="card-text">Chỉ việc ngắm và bắn. Liệu mọi thứ có đơn giản như vậy ? Thử ngay Just Aim And Shoot.</p>
+                <div class="d-flex justify-content-between align-items-center">
+                  <div class="btn-group">
+                    <a href="JustAimAndShoot.html"><button type="button" class="btn btn-sm btn-outline-secondary">View</button></a>
+                    <a href="https://kiga-studio.itch.io/just-aim-and-shoot?secret=1RzyJGGveRgKypmV1HBlklOYtU" target="_blank"><button type="button" class="btn btn-sm btn-outline-secondary">Download</button></a>
+                    <a href="https://kiga-studio.itch.io/just-aim-and-shoot-web?secret=JeI7goyOc6ypbVqKpPku4p4fqHo" target="_blank"><button type="button" class="btn btn-sm btn-outline-secondary">Play Now</button></a>
                   </div>
                   <small class="text-body-secondary">Free</small>
                 </div>
@@ -404,6 +411,7 @@
                 <p class="card-text">Blackjack K là một game blackjack với luật khác thông thường. Không giới hạn đầu dưới tuy nhiên giới hạn đầu trên là 21. Nếu đạt 21 điểm thắng ngay lập tức và bạn có thể bet thêm tiền bất cứ lúc nào.</p>
                 <div class="d-flex justify-content-between align-items-center">
                   <div class="btn-group">
+                    <a href="BlackjackK.html"><button type="button" class="btn btn-sm btn-outline-secondary">View</button></a>
                     <a href="https://kiga-studio.itch.io/blackjack-k?secret=ajlySw5DO2uLbPCw33qST8oz8k" target="_blank"><button type="button" class="btn btn-sm btn-outline-secondary">Download</button></a>
                     <a href="https://kiga-studio.itch.io/blackjack-k-web?secret=0EUfFR9pSznlS4357ELqQT2chI" target="_blank"><button type="button" class="btn btn-sm btn-outline-secondary">Play Now</button></a>
                   </div>
@@ -421,23 +429,8 @@
                 <p class="card-text">Low Pakour phiên bản gái alime siêu chi. Nhưng mới làm được 1 màn...</p>
                 <div class="d-flex justify-content-between align-items-center">
                   <div class="btn-group">
+                    <a href="UnityChanGo.html"><button type="button" class="btn btn-sm btn-outline-secondary">View</button></a>
                     <a href="https://kiga-studio.itch.io/unity-chan-go?secret=Ge7bqHmXLqi0V5BRe8Kn8rQuY" target="_blank"><button type="button" class="btn btn-sm btn-outline-secondary">Download</button></a>
-                  </div>
-                  <small class="text-body-secondary">Free</small>
-                </div>
-              </div>
-            </div>
-          </div>
-
-          <div class="col">
-            <div class="card shadow-sm">
-              <img src="img/unityworld3d/Screenshot 30-05-2024 081038.jpg" height="225"> 
-              <div class="card-body">
-                <h3 class="text">Unity World 3D</h3>
-                <p class="card-text">Hay tên gọi khác là The Exploxer. Đây là 1 game của Unity chia sẻ cho các dev. Tôi chỉ sửa một chút thôi :))</p>
-                <div class="d-flex justify-content-between align-items-center">
-                  <div class="btn-group">
-                    <a href="https://drive.google.com/drive/folders/1vvotTx2qurMN3Q3_R9lpKVVzLDsG-ais?usp=drive_link" target="_blank"><button type="button" class="btn btn-sm btn-outline-secondary">Download</button></a>
                   </div>
                   <small class="text-body-secondary">Free</small>
                 </div>
@@ -453,6 +446,7 @@
                 <p class="card-text">Bong là một game cực kì đơn giản rồi nhưng mà chơi thì vẫn cứ cuốn.</p>
                 <div class="d-flex justify-content-between align-items-center">
                   <div class="btn-group">
+                    <a href="Bong.html"><button type="button" class="btn btn-sm btn-outline-secondary">View</button></a>
                     <a href="https://kiga-studio.itch.io/bong?secret=PZ9hNv6uQGTneLfW7yLq0fezc" target="_blank"><button type="button" class="btn btn-sm btn-outline-secondary">Download</button></a>
                     <a href="https://kiga-studio.itch.io/bong-web?secret=gbEWguHHTpYYCTz10dws7LRXY" target="_blank"><button type="button" class="btn btn-sm btn-outline-secondary">Play Now</button></a>
                   </div>
@@ -470,6 +464,7 @@
                 <p class="card-text">Dodge Boom lại là một tựa game vô cùng đơn giản nhưng mà rất khó để thành thục. Nhiệm vụ của bạn là di chuyển chú cừu né khỏi những quả bom của đàn sói, liệu bạn có thể sống sót được bao lâu ?</p>
                 <div class="d-flex justify-content-between align-items-center">
                   <div class="btn-group">
+                    <a href="DodgeBoom.html"><button type="button" class="btn btn-sm btn-outline-secondary">View</button></a>
                     <a href="https://kiga-studio.itch.io/dodge-boom?secret=pnEVL0RJrHD5lZKDYLcjj6a4cno" target="_blank"><button type="button" class="btn btn-sm btn-outline-secondary">Download</button></a>
                     <a href="https://kiga-studio.itch.io/dodge-boom-web?secret=nf1GA9drah4PplXBLkSR4FiPhc" target="_blank"><button type="button" class="btn btn-sm btn-outline-secondary">Play Now</button></a>
                     <a href="download/DodgeBoom.apk" download><button type="button" class="btn btn-sm btn-outline-secondary">APK</button></a>
@@ -488,6 +483,7 @@
                 <p class="card-text">KOutplayed là game đọ nhân phẩm mạnh nhất trong các game. Tất cả mọi thứ đều phụ thuộc vào nhân phẩm của bạn. Dù có như thế nào đi nữa thì ai cũng có thể win.</p>
                 <div class="d-flex justify-content-between align-items-center">
                   <div class="btn-group">
+                    <a href="KOutplayed.html"><button type="button" class="btn btn-sm btn-outline-secondary">View</button></a>
                     <a href="https://kiga-studio.itch.io/koutplayed?secret=H5nUVr79zqes3vZb2OD6xdDpNrM" target="_blank"><button type="button" class="btn btn-sm btn-outline-secondary">Download</button></a>
                     <a href="https://kiga-studio.itch.io/koutplayed-web?secret=6TtYoOLJFS53d0XzH1NW6LZWtU4" target="_blank"><button type="button" class="btn btn-sm btn-outline-secondary">Play Now</button></a>
                     <a href="download/KOutplayed!.apk" download><button type="button" class="btn btn-sm btn-outline-secondary">APK</button></a>
@@ -506,6 +502,7 @@
                 <p class="card-text">Divisor Duel là một trò chơi đấu trí tuệ. Về cơ bản sẽ có một số bắt đầu và một khoảng chết và nhiệm vụ của người chơi là số khởi đầu rơi vào khoảng chết khi vào lượt đối phương. Số khởi đầu sẽ thay đổi bằng cách lấy số đó trừ đi một trong các số mà số đó có thể chia được.</p>
                 <div class="d-flex justify-content-between align-items-center">
                   <div class="btn-group">
+                    <a href="DivisorDuel.html"><button type="button" class="btn btn-sm btn-outline-secondary">View</button></a>
                     <a href="https://kiga-studio.itch.io/finding-number?secret=X8FJeECje1TzmYZhdUfQhU36n88" target="_blank"><button type="button" class="btn btn-sm btn-outline-secondary">Download</button></a>
                     <a href="https://kiga-studio.itch.io/divisor-duel-web?secret=O0B0FA6yEZA31qMrc9Re1HrQUY" target="_blank"><button type="button" class="btn btn-sm btn-outline-secondary">Play Now</button></a>
                     <a href="download/Divisor Duel.apk" download><button type="button" class="btn btn-sm btn-outline-secondary">APK</button></a>
@@ -524,6 +521,7 @@
                 <p class="card-text">KCaro là một trò chơi quen thuộc. Lối chơi đơn giản nhưng chưa bao giờ là dễ để trở thành một pro player.</p>
                 <div class="d-flex justify-content-between align-items-center">
                   <div class="btn-group">
+                    <a href="KCaro.html"><button type="button" class="btn btn-sm btn-outline-secondary">View</button></a>
                     <a href="https://kiga-studio.itch.io/kcaro?secret=GKBuThKXNYYoWU1EkjdwKDqKSs0" target="_blank"><button type="button" class="btn btn-sm btn-outline-secondary">Download</button></a>
                   </div>
                   <small class="text-body-secondary">   Free</small>
@@ -539,6 +537,7 @@
                 <p class="card-text">KCaro - LAN là phiên bản người chơi có thể chơi nếu kết nối cùng một mạng. Chỉ cần nhập Mã Phòng (IP) của người chơi kia là có thể chơi được với nhau.</p>
                 <div class="d-flex justify-content-between align-items-center">
                   <div class="btn-group">
+                    <a href="KCaroLan.html"><button type="button" class="btn btn-sm btn-outline-secondary">View</button></a>
                     <a href="https://kiga-studio.itch.io/kcaro-lan?secret=T2JOtQdwupDqZdr5FUHyV7z7WL8" target="_blank"><button type="button" class="btn btn-sm btn-outline-secondary">Download</button></a>
                   </div>
                   <small class="text-body-secondary">   Free</small>
@@ -554,6 +553,7 @@
                 <p class="card-text">Đúng như tên game, bạn điều khiển một con lợn và né những cái thùng rơi từ cao xuống. Chỉ có 1 điều nó không hề dễ...</p>
                 <div class="d-flex justify-content-between align-items-center">
                   <div class="btn-group">
+                    <a href="PigDodge.html"><button type="button" class="btn btn-sm btn-outline-secondary">View</button></a>
                     <a href="download/Pig Dodge.apk" download><button type="button" class="btn btn-sm btn-outline-secondary">APK</button></a>
                   </div>
                   <small class="text-body-secondary">Free</small>
@@ -681,6 +681,7 @@
               </div>
             </div>
           </div>
+
           <div class="col">
             <div class="card shadow-sm">
               <img src="img/taotap//Slide1.PNG" height="225"> 
@@ -697,6 +698,23 @@
               </div>
             </div>
           </div>
+
+          <div class="col">
+            <div class="card shadow-sm">
+              <img src="img/unityworld3d/Screenshot 30-05-2024 081038.jpg" height="225"> 
+              <div class="card-body">
+                <h3 class="text-danger">Unity World 3D</h3>
+                <p class="card-text">Hay tên gọi khác là The Exploxer. Đây là 1 game của Unity chia sẻ cho các dev. Tôi chỉ sửa một chút thôi :))</p>
+                <div class="d-flex justify-content-between align-items-center">
+                  <div class="btn-group">
+                    
+                  </div>
+                  <small class="text-body-secondary">Free</small>
+                </div>
+              </div>
+            </div>
+          </div>
+
           <div class="col">
             <div class="card shadow-sm styleClose">
               <img src="img/multi.jpg" height="225"> 
@@ -711,6 +729,7 @@
               </div>
             </div>
           </div>
+
           <div class="col">
             <div class="card shadow-sm styleClose">
               <img src="img/pp.jpg" height="225"> 
