--- a/ChigyBird.html
+++ b/ChigyBird.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link href="style/style2.css" rel="stylesheet">
     <link rel="icon" type="image/x-icon" href="img/favicon-16x16.png">
-    <title>Merio Adventure</title>
+    <title>Chigy Block</title>
 </head>
 <body>
 <div class="row">
