--- a/ToOtherSide.html
+++ b/ToOtherSide.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link href="style/style2.css" rel="stylesheet">
     <link rel="icon" type="image/x-icon" href="img/favicon-16x16.png">
-    <title>Space Spector</title>
+    <title>Merio Adventure</title>
 </head>
 <body>
 <div class="row">
@@ -17,41 +17,28 @@
     </div>
     <div class="bg-danger-subtle">
       <h3 style="text-align:center">Info</h3>
-      <p style="text-align: center;"><b>Space Spector</b></p>
-      <p>-<b>Giới thiệu</b>: Game phản xạ cực cuốn. Phiên bản nâng cấp của game khủng long với nhiều tính năng cực căng. </p>
-      <p>-<b>Phiên bản</b>: 1.0</p>
-      <p>-<b>Phát hành</b>: 17/06/2024</p>
-      <p>-<b>Last Update</b>: 17/06/2024</p>
-      <p>-<b>Thể loại</b>: Endless, Singleplayer</p>
-      <p>-<b>Available</b>: PC, Website</p>
+      <p style="text-align: center;"><b>To Other Side</b></p>
+      <p>-<b>Giới thiệu</b>: Từ tay không đến khám phá vùng đất mới.</p>
+      <p>-<b>Phiên bản</b>: Beta</p>
+      <p>-<b>Phát hành</b>: 03/08/2024</p>
+      <p>-<b>Last Update</b>: 03/08/2024</p>
+      <p>-<b>Thể loại</b>: Singleplayer, Farming</p>
+      <p>-<b>Available</b>: PC</p>
     </div>
     <div class="bg-info">
       <h3 style="text-align:center">Link</h3>
       <p>-<b>Back to Kiga Games</b>: <a href="index.html"><button type="button" class="btn btn-sm btn-outline-secondary">Home</button></a>
-        <p>-<b>Download Now</b>: <a href="https://kiga-studio.itch.io/space-spector?secret=J4A0qnrmVtvs4Aq4hGn9Fho4Nk" target="_blank"><button type="button" class="btn btn-sm btn-outline-secondary">Download</button></a>
-      <p>-<b>Play Now</b> <a href="https://kiga-studio.itch.io/space-spector-web?secret=UPgG2XaKDgXYX2nFOHvvJf6Vgig" target="_blank"><button type="button" class="btn btn-sm btn-outline-secondary">Play Now</button></a>
+        <p>-<b>Download Now</b>: <a href="https://kiga-studio.itch.io/to-other-side?secret=SMQqMeJ9Xd16sl52AWEK3SJehTw" target="_blank"><button type="button" class="btn btn-sm btn-outline-secondary">Download</button></a>
       <p>-<b>Contact me</b>: <a href="https://www.facebook.com/ga.kiet.925" target="_blank"><button type="button" class="btn btn-sm btn-outline-secondary">Facebook</button></a></p>
     </div>
   </div>
 <div id="carouselExampleIndicators" class="bg-dark carousel slide col-md-10 bg-dark col-md-2">
   <div class="carousel-indicators">
     <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="0" class="active" aria-current="true" aria-label="Slide 1"></button>
-    <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="1" aria-label="Slide 2"></button>
-    <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="2" aria-label="Slide 3"></button>
-    <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="3" aria-label="Slide 4"></button>
   </div>
   <div class="carousel-inner">
     <div class="carousel-item active">
-      <img src="img/spacespector/Screenshot 09-09-2024 075708.jpg" class="d-block w-100" alt="...">
-    </div>
-    <div class="carousel-item">
-      <img src="img/spacespector/Screenshot 09-09-2024 075720.jpg" class="d-block w-100" alt="...">
-    </div>
-    <div class="carousel-item">
-      <img src="img/spacespector/Screenshot 09-09-2024 075727.jpg" class="d-block w-100" alt="...">
-    </div>
-    <div class="carousel-item">
-      <img src="img/spacespector/Screenshot 12-06-2024 164740.jpg" class="d-block w-100" alt="...">
+      <img src="img/tootherside/Screenshot 03-08-2024 184753.jpg" class="d-block w-100" alt="...">
     </div>
   </div>
   <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide="prev">
