--- a/DivisorDuel.html
+++ b/DivisorDuel.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link href="style/style2.css" rel="stylesheet">
     <link rel="icon" type="image/x-icon" href="img/favicon-16x16.png">
-    <title>Finding Number</title>
+    <title>Divisor Duel</title>
 </head>
 <body>
 <div class="row">
@@ -17,46 +17,30 @@
     </div>
     <div class="bg-danger-subtle">
       <h3 style="text-align:center">Info</h3>
-      <p style="text-align: center;"><b>Finding Number</b></p>
-      <p>-<b>Giới thiệu</b>: Finding Number lại là một trò chơi dựa vào nhân phẩm đến từ Kiga. Trò chơi rất đơn giản đoán số cần tìm là số gì dựa theo những gợi ý có được từ những lần đoán trước.</p>
+      <p style="text-align: center;"><b>Divisor Duel</b></p>
+      <p>-<b>Giới thiệu</b>: Divisor Duel là một trò chơi đấu trí tuệ. Về cơ bản sẽ có một số bắt đầu và một khoảng chết và nhiệm vụ của người chơi là số khởi đầu rơi vào khoảng chết khi vào lượt đối phương. Số khởi đầu sẽ thay đổi bằng cách lấy số đó trừ đi một trong các số mà số đó có thể chia được.</p>
       <p>-<b>Phiên bản</b>: 1.0</p>
-      <p>-<b>Phát hành</b>: 06/03/2024</p>
-      <p>-<b>Last Update</b>: 06/03/2024</p>
-      <p>-<b>Thể loại</b>: Singleplayer, Gacha</p>
-      <p>-<b>Available</b>: PC</p>
+      <p>-<b>Phát hành</b>: 12/05/2024</p>
+      <p>-<b>Last Update</b>: 12/05/2024</p>
+      <p>-<b>Thể loại</b>: Solo, Multiplayer</p>
+      <p>-<b>Available</b>: PC, Website, Mobile</p>
     </div>
     <div class="bg-info">
       <h3 style="text-align:center">Link</h3>
       <p>-<b>Back to Kiga Games</b>: <a href="index.html"><button type="button" class="btn btn-sm btn-outline-secondary">Home</button></a>
       <p>-<b>Download Now</b>: <a href="https://kiga-studio.itch.io/finding-number?secret=X8FJeECje1TzmYZhdUfQhU36n88" target="_blank"><button type="button" class="btn btn-sm btn-outline-secondary">Download</button></a>
-        <p>-<b>Play Now</b>: <a href="https://kiga-studio.itch.io/finding-number-web?secret=SrsCVCCDDphGUMf48pfutfLP7xg" target="_blank"><button type="button" class="btn btn-sm btn-outline-secondary">Play Now</button></a>
-          <p>-<b>APK</b>: <a href="download/Finding Number.apk" download><button type="button" class="btn btn-sm btn-outline-secondary">Download</button></a>
-          <p>-<b>Contact me</b>: <a href="https://www.facebook.com/ga.kiet.925" target="_blank"><button type="button" class="btn btn-sm btn-outline-secondary">Facebook</button></a></p>
+      <p>-<b>Play Now</b> <a href="https://kiga-studio.itch.io/divisor-duel-web?secret=O0B0FA6yEZA31qMrc9Re1HrQUY" target="_blank"><button type="button" class="btn btn-sm btn-outline-secondary">Play Now</button></a>
+        <p>-<b>APK</b>: <a href="download/Divisor Duel.apk" download><button type="button" class="btn btn-sm btn-outline-secondary">Download</button></a>
+        <p>-<b>Contact me</b>: <a href="https://www.facebook.com/ga.kiet.925" target="_blank"><button type="button" class="btn btn-sm btn-outline-secondary">Facebook</button></a></p>
     </div>
   </div>
-<div id="carouselExampleIndicators" class="carousel slide col-md-10 bg-dark col-md-2">
+<div id="carouselExampleIndicators" class="bg-dark carousel slide col-md-10 bg-dark col-md-2">
   <div class="carousel-indicators">
     <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="0" class="active" aria-current="true" aria-label="Slide 1"></button>
-    <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="1" aria-label="Slide 2"></button>
-    <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="2" aria-label="Slide 3"></button>
-    <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="3" aria-label="Slide 4"></button>
-    <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="4" aria-label="Slide 5"></button>
   </div>
   <div class="carousel-inner">
     <div class="carousel-item active">
-      <img src="img/findingnumber.jpg" class="d-block w-100" alt="...">
-    </div>
-    <div class="carousel-item">
-      <img src="img/findingnumber/Slide2.PNG" class="d-block w-100" alt="...">
-    </div>
-    <div class="carousel-item">
-      <img src="img/findingnumber/Slide3.PNG" class="d-block w-100" alt="...">
-    </div>
-    <div class="carousel-item">
-      <img src="img/findingnumber/Slide4.PNG" class="d-block w-100" alt="...">
-    </div>
-    <div class="carousel-item">
-      <img src="img/findingnumber/Slide5.PNG" class="d-block w-100" alt="...">
+      <img src="img/divisorduel/Screenshot 11-05-2024 230808.jpg" class="d-block w-100" alt="...">
     </div>
   </div>
   <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide="prev">
