--- a/index.html
+++ b/index.html
@@ -67,10 +67,16 @@
   </header>
   
   <main class="">
-
     <div id="carouselExampleCaptions" class="carousel slide">
       <div class="carousel-inner">
         <div class="carousel-item active">
+          <img src="img/rhymix/Screenshot 13-09-2024 111312.jpg" class="d-block w-100 styleSlide" alt="...">
+          <div class="carousel-caption d-none d-md-block">
+            <h5>Rhymix</h5>
+            <p>Làm thử Rhythm Game xem như nào...</p>
+          </div>
+        </div>
+        <div class="carousel-item">
           <img src="img/hiddenblock/Screenshot 08-09-2024 214839.jpg" class="d-block w-100 styleSlide" alt="...">
           <div class="carousel-caption d-none d-md-block">
             <h5>Hidden Block</h5>
@@ -82,13 +88,6 @@
           <div class="carousel-caption d-none d-md-block">
             <h5>Chigy Birds</h5>
             <p>Angry Birds Fake 99%</p>
-          </div>
-        </div>
-        <div class="carousel-item">
-          <img src="img/soloshooting/Screenshot 08-09-2024 215016.jpg" class="d-block w-100 styleSlide" alt="...">
-          <div class="carousel-caption d-none d-md-block">
-            <h5>Solo Shooting</h5>
-            <p>Solo bắn súng nhưng mà nó lạ lắm.</p>
           </div>
         </div>
       </div>
@@ -123,6 +122,23 @@
       <div class="container">
         <h1 class="fw-light press-start text-center text-white styleHeader">Game Collection</h1> <br>
         <div class="row row-cols-1 row-cols-sm-2 row-cols-md-3 g-3">
+
+          <div class="col">
+            <div class="card shadow-sm styleNew">
+              <img src="img/rhymix/Screenshot 13-09-2024 111312.jpg" height="225"> 
+              <div class="card-body">
+                <h3 class="text-info">Rhymix</h3>
+                <p class="card-text">Làm thử Rhythm Game xem như nào...</p>
+                <div class="d-flex justify-content-between align-items-center">
+                  <div class="btn-group">
+                    <a href="Rhymix.html"><button type="button" class="btn btn-sm btn-outline-secondary">View</button></a>
+                    <a href="https://kiga-studio.itch.io/rhymix?secret=l4Mcj77vA3MlAVcGnqjnhWe2k" target="_blank"><button type="button" class="btn btn-sm btn-outline-secondary">Download</button></a>
+                  </div>
+                  <small class="text-body-secondary">Free</small>
+                </div>
+              </div>
+            </div>
+          </div>
 
           <div class="col">
             <div class="card shadow-sm styleNew">
@@ -168,23 +184,6 @@
                   <div class="btn-group">
                     <a href="SoloShooting.html"><button type="button" class="btn btn-sm btn-outline-secondary">View</button></a>
                     <a href="https://kiga-studio.itch.io/solo-shooting?secret=y1W1iWnmzzMaTGb7W12uf4ozQ4" target="_blank"><button type="button" class="btn btn-sm btn-outline-secondary">Download</button></a>
-                  </div>
-                  <small class="text-body-secondary">Free</small>
-                </div>
-              </div>
-            </div>
-          </div>
-
-          <div class="col">
-            <div class="card shadow-sm styleNew">
-              <img src="img/tootherside/Screenshot 03-08-2024 184753.jpg" height="225"> 
-              <div class="card-body">
-                <h3 class="text-info">To Other Side (Beta)</h3>
-                <p class="card-text">Từ tay không đến khám phá vùng đất mới.</p>
-                <div class="d-flex justify-content-between align-items-center">
-                  <div class="btn-group">
-                    <a href="ToOtherSide.html"><button type="button" class="btn btn-sm btn-outline-secondary">View</button></a>
-                    <a href="https://kiga-studio.itch.io/to-other-side?secret=SMQqMeJ9Xd16sl52AWEK3SJehTw" target="_blank"><button type="button" class="btn btn-sm btn-outline-secondary">Download</button></a>
                   </div>
                   <small class="text-body-secondary">Free</small>
                 </div>
@@ -246,7 +245,7 @@
           </div>
 
           <div class="col">
-            <div class="card shadow-sm styleNew">
+            <div class="card shadow-sm styleHot">
               <img src="img/spacespector/Screenshot 12-06-2024 164740.jpg" height="225"> 
               <div class="card-body">
                 <h3 class="text-warning">Space Spector</h3>
@@ -264,7 +263,7 @@
           </div>
 
           <div class="col">
-            <div class="card shadow-sm styleNew">
+            <div class="card shadow-sm styleHot">
               <img src="img/kitchenchaos/Screenshot 09-06-2024 232324.jpg" height="225"> 
               <div class="card-body">
                 <h3 class="text-warning">Kitchen Chaos</h3>
@@ -368,7 +367,24 @@
           </div>
 
           <div class="col">
-            <div class="card shadow-sm styleNew">
+            <div class="card shadow-sm">
+              <img src="img/tootherside/Screenshot 03-08-2024 184753.jpg" height="225"> 
+              <div class="card-body">
+                <h3 class="text">To Other Side (Beta)</h3>
+                <p class="card-text">Từ tay không đến khám phá vùng đất mới.</p>
+                <div class="d-flex justify-content-between align-items-center">
+                  <div class="btn-group">
+                    <a href="ToOtherSide.html"><button type="button" class="btn btn-sm btn-outline-secondary">View</button></a>
+                    <a href="https://kiga-studio.itch.io/to-other-side?secret=SMQqMeJ9Xd16sl52AWEK3SJehTw" target="_blank"><button type="button" class="btn btn-sm btn-outline-secondary">Download</button></a>
+                  </div>
+                  <small class="text-body-secondary">Free</small>
+                </div>
+              </div>
+            </div>
+          </div>
+
+          <div class="col">
+            <div class="card shadow-sm">
               <img src="img/soliderz/Screenshot 17-06-2024 230349.jpg" height="225"> 
               <div class="card-body">
                 <h3 class="text">Solider Z</h3>
@@ -386,7 +402,7 @@
           </div>
 
           <div class="col">
-            <div class="card shadow-sm styleHot">
+            <div class="card shadow-sm">
               <img src="img/justaimandshoot/Screenshot 11-05-2024 223645.jpg" height="225"> 
               <div class="card-body">
                 <h3 class="text">Just Aim And Shoot</h3>
