--- a/Rhymix.html
+++ b/Rhymix.html
@@ -18,7 +18,7 @@
     <div class="bg-danger-subtle">
       <h3 style="text-align:center">Info</h3>
       <p style="text-align: center;"><b>Rhymix</b></p>
-      <p>-<b>Giới thiệu</b>: Làm thử Rhythm Game xem như nào...</p>
+      <p>-<b>Giới thiệu</b>: Làm thử Rhythm Game xem như nào... Điểm nổi bật của game này là bạn có thể chơi bất kì bài nào bạn muốn!</p>
       <p>-<b>Phiên bản</b>: 1.0</p>
       <p>-<b>Phát hành</b>: 13/09/2024</p>
       <p>-<b>Last Update</b>: 13/09/2024</p>
@@ -38,7 +38,7 @@
   </div>
   <div class="carousel-inner">
     <div class="carousel-item active">
-      <img src="img/rhymix/Screenshot 13-09-2024 111312.jpg" class="d-block w-100" alt="...">
+      <img src="img/rhymix/Screenshot 14-09-2024 200522.jpg" class="d-block w-100" alt="...">
     </div>
   </div>
   <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide="prev">
