--- a/index.html
+++ b/index.html
@@ -70,10 +70,10 @@
     <div id="carouselExampleCaptions" class="carousel slide">
       <div class="carousel-inner">
         <div class="carousel-item active">
-          <img src="img/rhymix/Screenshot 13-09-2024 111312.jpg" class="d-block w-100 styleSlide" alt="...">
+          <img src="img/rhymix/Screenshot 14-09-2024 200522.jpg" class="d-block w-100 styleSlide" alt="...">
           <div class="carousel-caption d-none d-md-block">
             <h5>Rhymix</h5>
-            <p>Làm thử Rhythm Game xem như nào...</p>
+            <p>Làm thử Rhythm Game xem như nào... Điểm nổi bật của game này là bạn có thể chơi bất kì bài nào bạn muốn!</p>
           </div>
         </div>
         <div class="carousel-item">
@@ -125,10 +125,10 @@
 
           <div class="col">
             <div class="card shadow-sm styleNew">
-              <img src="img/rhymix/Screenshot 13-09-2024 111312.jpg" height="225"> 
+              <img src="img/rhymix/Screenshot 14-09-2024 200522.jpg" height="225"> 
               <div class="card-body">
                 <h3 class="text-info">Rhymix</h3>
-                <p class="card-text">Làm thử Rhythm Game xem như nào...</p>
+                <p class="card-text">Làm thử Rhythm Game xem như nào... Điểm nổi bật của game này là bạn có thể chơi bất kì bài nào bạn muốn!</p>
                 <div class="d-flex justify-content-between align-items-center">
                   <div class="btn-group">
                     <a href="Rhymix.html"><button type="button" class="btn btn-sm btn-outline-secondary">View</button></a>
