--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@
   <main class="">
     <div id="carouselExampleCaptions" class="carousel slide">
       <div class="carousel-inner">
-        <div class="carousel-item active">
+        <div class="carousel-item">
           <img src="img/rhymix/Screenshot 14-09-2024 200522.jpg" class="d-block w-100 styleSlide" alt="...">
           <div class="carousel-caption d-none d-md-block">
             <h5>Rhymix</h5>
@@ -83,11 +83,11 @@
             <p>Low Parkour nhưng mà ở đắng cấp khác. Cú nhảy may mắn - Cái chết bất ngờ!</p>
           </div>
         </div>
-        <div class="carousel-item">
-          <img src="img/chigybird/Screenshot 08-09-2024 214932.jpg" class="d-block w-100 styleSlide" alt="...">
+        <div class="carousel-item active">
+          <img src="img/searchpoint/Screenshot 18-09-2024 224757.jpg" class="d-block w-100 styleSlide" alt="...">
           <div class="carousel-caption d-none d-md-block">
-            <h5>Chigy Birds</h5>
-            <p>Angry Birds Fake 99%</p>
+            <h5>Search Point</h5>
+            <p>Game áp lực nhất 2024</p>
           </div>
         </div>
       </div>
@@ -122,6 +122,23 @@
       <div class="container">
         <h1 class="fw-light press-start text-center text-white styleHeader">Game Collection</h1> <br>
         <div class="row row-cols-1 row-cols-sm-2 row-cols-md-3 g-3">
+
+          <div class="col">
+            <div class="card shadow-sm">
+              <img src="img/searchpoint/Screenshot 18-09-2024 224757.jpg" height="225"> 
+              <div class="card-body">
+                <h3 class="">Search Point</h3>
+                <p class="card-text">Game áp lực nhất 2024</p>
+                <div class="d-flex justify-content-between align-items-center">
+                  <div class="btn-group">
+                    <a href="SearchPoint.html"><button type="button" class="btn btn-sm btn-outline-secondary">View</button></a>
+                    <a href="download/Search Point.apk" download><button type="button" class="btn btn-sm btn-outline-secondary">APK</button></a>
+                  </div>
+                  <small class="text-body-secondary">Free</small>
+                </div>
+              </div>
+            </div>
+          </div>
 
           <div class="col">
             <div class="card shadow-sm styleNew">
