--- a/index.html
+++ b/index.html
@@ -195,7 +195,7 @@
             <div class="card shadow-sm styleNew">
               <img src="img/soloshooting/Screenshot 08-09-2024 215016.jpg" height="225"> 
               <div class="card-body">
-                <h3 class="text-info">Solo Shooting</h3>
+                <h3 class="text-success">Solo Shooting</h3>
                 <p class="card-text">Solo bắn súng nhưng mà nó lạ lắm.</p>
                 <div class="d-flex justify-content-between align-items-center">
                   <div class="btn-group">
