--- a/index.html
+++ b/index.html
@@ -192,7 +192,7 @@
           </div>
 
           <div class="col">
-            <div class="card shadow-sm styleNew">
+            <div class="card shadow-sm styleUpdate">
               <img src="img/soloshooting/Screenshot 08-09-2024 215016.jpg" height="225"> 
               <div class="card-body">
                 <h3 class="text-success">Solo Shooting</h3>
@@ -384,6 +384,25 @@
           </div>
 
           <div class="col">
+            <div class="card shadow-sm styleHot">
+              <img src="img/koutplayed/Screenshot 11-05-2024 230705.jpg" height="225"> 
+              <div class="card-body">
+                <h3 class="text-warning">KOutplayed!</h3>
+                <p class="card-text">KOutplayed là game đọ nhân phẩm mạnh nhất trong các game. Tất cả mọi thứ đều phụ thuộc vào nhân phẩm của bạn. Dù có như thế nào đi nữa thì ai cũng có thể win.</p>
+                <div class="d-flex justify-content-between align-items-center">
+                  <div class="btn-group">
+                    <a href="KOutplayed.html"><button type="button" class="btn btn-sm btn-outline-secondary">View</button></a>
+                    <a href="https://kiga-studio.itch.io/koutplayed?secret=H5nUVr79zqes3vZb2OD6xdDpNrM" target="_blank"><button type="button" class="btn btn-sm btn-outline-secondary">Download</button></a>
+                    <a href="https://kiga-studio.itch.io/koutplayed-web?secret=6TtYoOLJFS53d0XzH1NW6LZWtU4" target="_blank"><button type="button" class="btn btn-sm btn-outline-secondary">Play Now</button></a>
+                    <a href="download/KOutplayed!.apk" download><button type="button" class="btn btn-sm btn-outline-secondary">APK</button></a>
+                  </div>
+                  <small class="text-body-secondary">Free </small>
+                </div>
+              </div>
+            </div>
+          </div>
+
+          <div class="col">
             <div class="card shadow-sm">
               <img src="img/tootherside/Screenshot 03-08-2024 184753.jpg" height="225"> 
               <div class="card-body">
@@ -501,25 +520,6 @@
                     <a href="https://kiga-studio.itch.io/dodge-boom?secret=pnEVL0RJrHD5lZKDYLcjj6a4cno" target="_blank"><button type="button" class="btn btn-sm btn-outline-secondary">Download</button></a>
                     <a href="https://kiga-studio.itch.io/dodge-boom-web?secret=nf1GA9drah4PplXBLkSR4FiPhc" target="_blank"><button type="button" class="btn btn-sm btn-outline-secondary">Play Now</button></a>
                     <a href="download/DodgeBoom.apk" download><button type="button" class="btn btn-sm btn-outline-secondary">APK</button></a>
-                  </div>
-                  <small class="text-body-secondary">Free </small>
-                </div>
-              </div>
-            </div>
-          </div>
-          
-          <div class="col">
-            <div class="card shadow-sm">
-              <img src="img/koutplayed/Screenshot 11-05-2024 230705.jpg" height="225"> 
-              <div class="card-body">
-                <h3 class="text">KOutplayed!</h3>
-                <p class="card-text">KOutplayed là game đọ nhân phẩm mạnh nhất trong các game. Tất cả mọi thứ đều phụ thuộc vào nhân phẩm của bạn. Dù có như thế nào đi nữa thì ai cũng có thể win.</p>
-                <div class="d-flex justify-content-between align-items-center">
-                  <div class="btn-group">
-                    <a href="KOutplayed.html"><button type="button" class="btn btn-sm btn-outline-secondary">View</button></a>
-                    <a href="https://kiga-studio.itch.io/koutplayed?secret=H5nUVr79zqes3vZb2OD6xdDpNrM" target="_blank"><button type="button" class="btn btn-sm btn-outline-secondary">Download</button></a>
-                    <a href="https://kiga-studio.itch.io/koutplayed-web?secret=6TtYoOLJFS53d0XzH1NW6LZWtU4" target="_blank"><button type="button" class="btn btn-sm btn-outline-secondary">Play Now</button></a>
-                    <a href="download/KOutplayed!.apk" download><button type="button" class="btn btn-sm btn-outline-secondary">APK</button></a>
                   </div>
                   <small class="text-body-secondary">Free </small>
                 </div>
