--- a/index.html
+++ b/index.html
@@ -201,6 +201,7 @@
                   <div class="btn-group">
                     <a href="SoloShooting.html"><button type="button" class="btn btn-sm btn-outline-secondary">View</button></a>
                     <a href="https://kiga-studio.itch.io/solo-shooting?secret=y1W1iWnmzzMaTGb7W12uf4ozQ4" target="_blank"><button type="button" class="btn btn-sm btn-outline-secondary">Download</button></a>
+                    <a href="https://kiga-studio.itch.io/solo-shooting-web?secret=7YC0PwofQVjnk980AoMnrP7eQ" target="_blank"><button type="button" class="btn btn-sm btn-outline-secondary">Play Now</button></a>
                   </div>
                   <small class="text-body-secondary">Free</small>
                 </div>
@@ -306,6 +307,7 @@
                   <div class="btn-group">
                     <a href="ZombieHunter.html"><button type="button" class="btn btn-sm btn-outline-secondary">View</button></a>
                     <a href="https://kiga-studio.itch.io/zombie-hunter?secret=XR3MdPznFBKgdnFD0Ctm5qMjo" target="_blank"><button type="button" class="btn btn-sm btn-outline-secondary">Download</button></a>
+                    <a href="https://kiga-studio.itch.io/zombie-hunter-web?secret=OOJhKhAJc8twYeJUgw0STtXu0E" target="_blank"><button type="button" class="btn btn-sm btn-outline-secondary">Play Now</button></a>
                   </div>
                   <small class="text-body-secondary">Free</small>
                 </div>
