--- a/index.html
+++ b/index.html
@@ -124,10 +124,10 @@
         <div class="row row-cols-1 row-cols-sm-2 row-cols-md-3 g-3">
 
           <div class="col">
-            <div class="card shadow-sm">
+            <div class="card shadow-sm styleNew">
               <img src="img/searchpoint/Screenshot 18-09-2024 224757.jpg" height="225"> 
               <div class="card-body">
-                <h3 class="">Search Point</h3>
+                <h3 class="text-info">Search Point</h3>
                 <p class="card-text">Game áp lực nhất 2024</p>
                 <div class="d-flex justify-content-between align-items-center">
                   <div class="btn-group">
