--- a/index.html
+++ b/index.html
@@ -76,14 +76,14 @@
             <p>Làm thử Rhythm Game xem như nào... Điểm nổi bật của game này là bạn có thể chơi bất kì bài nào bạn muốn!</p>
           </div>
         </div>
-        <div class="carousel-item">
-          <img src="img/hiddenblock/Screenshot 08-09-2024 214839.jpg" class="d-block w-100 styleSlide" alt="...">
+        <div class="carousel-item active">
+          <img src="img/dontstop/Screenshot 02-10-2024 174104.jpg" class="d-block w-100 styleSlide" alt="...">
           <div class="carousel-caption d-none d-md-block">
-            <h5>Hidden Block</h5>
-            <p>Low Parkour nhưng mà ở đắng cấp khác. Cú nhảy may mắn - Cái chết bất ngờ!</p>
+            <h5>Don't Stop</h5>
+            <p>Tựa game với lối chơi đơn giản và giải trí có thể chơi tới 4 người!</p>
           </div>
         </div>
-        <div class="carousel-item active">
+        <div class="carousel-item">
           <img src="img/searchpoint/Screenshot 18-09-2024 224757.jpg" class="d-block w-100 styleSlide" alt="...">
           <div class="carousel-caption d-none d-md-block">
             <h5>Search Point</h5>
@@ -122,6 +122,23 @@
       <div class="container">
         <h1 class="fw-light press-start text-center text-white styleHeader">Game Collection</h1> <br>
         <div class="row row-cols-1 row-cols-sm-2 row-cols-md-3 g-3">
+
+          <div class="col">
+            <div class="card shadow-sm styleNew">
+              <img src="img/dontstop/Screenshot 02-10-2024 174104.jpg" height="225"> 
+              <div class="card-body">
+                <h3 class="text-info">Don't Stop</h3>
+                <p class="card-text">Tựa game với lối chơi đơn giản và giải trí có thể chơi tới 4 người!</p>
+                <div class="d-flex justify-content-between align-items-center">
+                  <div class="btn-group">
+                    <a href="DontStop.html"><button type="button" class="btn btn-sm btn-outline-secondary">View</button></a>
+                    <a href="https://kiga-studio.itch.io/dont-stop?secret=Ug9tLZZ9RyFDolPJHfuSvsdKbfQ" target="_blank"><button type="button" class="btn btn-sm btn-outline-secondary">Download</button></a>
+                  </div>
+                  <small class="text-body-secondary">Free</small>
+                </div>
+              </div>
+            </div>
+          </div>
 
           <div class="col">
             <div class="card shadow-sm styleNew">
