--- a/Spikefall.html
+++ b/Spikefall.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link href="style/style2.css" rel="stylesheet">
     <link rel="icon" type="image/x-icon" href="img/favicon-16x16.png">
-    <title>Don't Stop</title>
+    <title>Chess K</title>
 </head>
 <body>
 <div class="row">
@@ -17,8 +17,8 @@
     </div>
     <div class="bg-danger-subtle">
       <h3 style="text-align:center">Info</h3>
-      <p style="text-align: center;"><b>Don't Stop</b></p>
-      <p>-<b>Giới thiệu</b>: Tựa game với lối chơi đơn giản và giải trí có thể chơi tới 4 người!</p>
+      <p style="text-align: center;"><b>Chess K</b></p>
+      <p>-<b>Giới thiệu</b>: Tựa game này thì ai cũng biết rồi...</p>
       <p>-<b>Phiên bản</b>: 1.0</p>
       <p>-<b>Phát hành</b>: 02/10/2024</p>
       <p>-<b>Last Update</b>: 02/10/2024</p>
@@ -38,7 +38,7 @@
   </div>
   <div class="carousel-inner">
     <div class="carousel-item active">
-      <img src="img/dontstop/Screenshot 02-10-2024 174104.jpg" class="d-block w-100" alt="...">
+      <img src="img/chessk/Screenshot 06-10-2024 084503.jpg" class="d-block w-100" alt="...">
     </div>
   </div>
   <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide="prev">
