--- a/ChessK.html
+++ b/ChessK.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link href="style/style2.css" rel="stylesheet">
     <link rel="icon" type="image/x-icon" href="img/favicon-16x16.png">
-    <title>Don't Stop</title>
+    <title>Spikefall</title>
 </head>
 <body>
 <div class="row">
@@ -17,12 +17,12 @@
     </div>
     <div class="bg-danger-subtle">
       <h3 style="text-align:center">Info</h3>
-      <p style="text-align: center;"><b>Don't Stop</b></p>
-      <p>-<b>Giới thiệu</b>: Tựa game với lối chơi đơn giản và giải trí có thể chơi tới 4 người!</p>
+      <p style="text-align: center;"><b>Spikefall</b></p>
+      <p>-<b>Giới thiệu</b>: Gai rơi</p>
       <p>-<b>Phiên bản</b>: 1.0</p>
-      <p>-<b>Phát hành</b>: 02/10/2024</p>
-      <p>-<b>Last Update</b>: 02/10/2024</p>
-      <p>-<b>Thể loại</b>: Multiplayer, Solo</p>
+      <p>-<b>Phát hành</b>: 06/10/2024</p>
+      <p>-<b>Last Update</b>: 06/10/2024</p>
+      <p>-<b>Thể loại</b>: Solo</p>
       <p>-<b>Available</b>: PC</p>
     </div>
     <div class="bg-info">
@@ -38,7 +38,7 @@
   </div>
   <div class="carousel-inner">
     <div class="carousel-item active">
-      <img src="img/dontstop/Screenshot 02-10-2024 174104.jpg" class="d-block w-100" alt="...">
+      <img src="img/spikefall/Screenshot 06-10-2024 085829.jpg" class="d-block w-100" alt="...">
     </div>
   </div>
   <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide="prev">
