--- a/ChessK.html
+++ b/ChessK.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link href="style/style2.css" rel="stylesheet">
     <link rel="icon" type="image/x-icon" href="img/favicon-16x16.png">
-    <title>Spikefall</title>
+    <title>Chess K</title>
 </head>
 <body>
 <div class="row">
@@ -17,12 +17,12 @@
     </div>
     <div class="bg-danger-subtle">
       <h3 style="text-align:center">Info</h3>
-      <p style="text-align: center;"><b>Spikefall</b></p>
-      <p>-<b>Giới thiệu</b>: Gai rơi</p>
+      <p style="text-align: center;"><b>Chess K</b></p>
+      <p>-<b>Giới thiệu</b>: Tựa game này thì ai cũng biết rồi...</p>
       <p>-<b>Phiên bản</b>: 1.0</p>
-      <p>-<b>Phát hành</b>: 06/10/2024</p>
-      <p>-<b>Last Update</b>: 06/10/2024</p>
-      <p>-<b>Thể loại</b>: Solo</p>
+      <p>-<b>Phát hành</b>: 02/10/2024</p>
+      <p>-<b>Last Update</b>: 02/10/2024</p>
+      <p>-<b>Thể loại</b>: Multiplayer, Solo</p>
       <p>-<b>Available</b>: PC</p>
     </div>
     <div class="bg-info">
@@ -38,7 +38,7 @@
   </div>
   <div class="carousel-inner">
     <div class="carousel-item active">
-      <img src="img/spikefall/Screenshot 06-10-2024 085829.jpg" class="d-block w-100" alt="...">
+      <img src="img/chessk/Screenshot 06-10-2024 084503.jpg" class="d-block w-100" alt="...">
     </div>
   </div>
   <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide="prev">
@@ -59,4 +59,3 @@
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
 <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.8/dist/umd/popper.min.js" integrity="sha384-I7E8VVD/ismYTF4hNIPjVp/Zjvgyol6VFvRkX/vR+Vc4jQkC+hVqc2pM8ODewa9r" crossorigin="anonymous"></script>
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.min.js" integrity="sha384-0pUGZvbkm6XF6gxjEnlmuGrJXVbNuzT9qBBavbLwCsOGabYfZo0T0to5eqruptLy" crossorigin="anonymous"></script>
-
