--- a/apps.html
+++ b/apps.html
@@ -44,12 +44,6 @@
                 </a>
               </li>
               <li>
-                <a href="codes.html" class="nav-link text-white">
-                  <img class="bi d-block mx-auto mb-1" src="img/icon/code.png" height="24" class="me-2">
-                  Code
-                </a>
-              </li>
-              <li>
                 <a href="videos.html" class="nav-link text-white">
                   <img class="bi d-block mx-auto mb-1" src="img/icon/video.png" height="24" class="me-2">
                   Video
@@ -223,7 +217,7 @@
               <img src="img/app/chatclient.jpg" height="225"> 
               <div class="card-body">
                 <h3 class="text">Chat Room Client</h3>
-                <p class="card-text">Dùng để truy cập vào phòng chat do "Chat Room Server" host. Lưu ý: vì đây là mạng LAN nên chỉ có thể kết nối nếu cùng wifi hoặc mạng.</p>
+                <p class="card-text"></p>
                 <div class="d-flex justify-content-between align-items-center">
                   <div class="btn-group">
                     <a href="https://kiga-studio.itch.io/chat-room-client?secret=XEZL8Amrub53BO6mfqd1zgVKc" target="_blank"><button type="button" class="btn btn-sm btn-outline-secondary">Download</button></a>
@@ -250,6 +244,7 @@
         <a href="https://www.youtube.com/channel/UCnbIUsnpXaXXc7Y9SeCZ4OA" target="_blank"><img src="img/icon/Dakirby309-Simply-Styled-YouTube.48.png" height="30" class="me-2"></a>
         <a href="https://www.facebook.com/ga.kiet.925" target="_blank"><img src="img/icon/Danleech-Simple-Facebook.48.png" height="30" class="me-2"></a>
         <a href="https://github.com/KietGa" target="_blank"><img src="img/icon/Limav-Flat-Gradient-Social-Github.48.png" height="30" class="me-2"></a>
+        <a href="https://discord.gg/KuQ9JjSFZq" target="_blank"><img src="img/discord.png" height="30" class="me-2"></a>
       </ul>
     </footer>
   </div>
