--- a/webs.html
+++ b/webs.html
@@ -43,13 +43,6 @@
                   Web
                 </a>
               </li>
-              <li>
-                <a href="codes.html" class="nav-link text-white">
-                  <img class="bi d-block mx-auto mb-1" src="img/icon/code.png" height="24" class="me-2">
-                  Code
-                </a>
-              </li>
-              <li>
                 <a href="videos.html" class="nav-link text-white">
                   <img class="bi d-block mx-auto mb-1" src="img/icon/video.png" height="24" class="me-2">
                   Video
@@ -241,6 +234,7 @@
         <a href="https://www.youtube.com/channel/UCnbIUsnpXaXXc7Y9SeCZ4OA" target="_blank"><img src="img/icon/Dakirby309-Simply-Styled-YouTube.48.png" height="30" class="me-2"></a>
         <a href="https://www.facebook.com/ga.kiet.925" target="_blank"><img src="img/icon/Danleech-Simple-Facebook.48.png" height="30" class="me-2"></a>
         <a href="https://github.com/KietGa" target="_blank"><img src="img/icon/Limav-Flat-Gradient-Social-Github.48.png" height="30" class="me-2"></a>
+        <a href="https://discord.gg/KuQ9JjSFZq" target="_blank"><img src="img/discord.png" height="30" class="me-2"></a>
       </ul>
     </footer>
   </div>
