--- a/index.html
+++ b/index.html
@@ -140,6 +140,7 @@
                   <div class="btn-group">
                     <a href="Spikefall.html"><button type="button" class="btn btn-sm btn-outline-secondary">View</button></a>
                     <a href="https://kiga-studio.itch.io/spikefall?secret=QNudGgmsrOxnJAlj8Bn4NKyYf2A" target="_blank"><button type="button" class="btn btn-sm btn-outline-secondary">Download</button></a>
+                    <a href="download/Spikefall.apk" download><button type="button" class="btn btn-sm btn-outline-secondary">APK</button></a>
                   </div>
                   <small class="text-body-secondary">Free</small>
                 </div>
@@ -208,6 +209,7 @@
                   <div class="btn-group">
                     <a href="HiddenBlock.html"><button type="button" class="btn btn-sm btn-outline-secondary">View</button></a>
                     <a href="https://kiga-studio.itch.io/hidden-block?secret=wFNZ5mzdJfPZ9U6TusqOMsQ6d7E" target="_blank"><button type="button" class="btn btn-sm btn-outline-secondary">Download</button></a>
+                    <a href="download/Hidden Block.apk" download><button type="button" class="btn btn-sm btn-outline-secondary">APK</button></a>
                   </div>
                   <small class="text-body-secondary">Free</small>
                 </div>
