--- a/EverlastingStar.html
+++ b/EverlastingStar.html
@@ -15,7 +15,7 @@
       <h3 style="text-align:center">Warning</h3>
       <p>-Click chuột sang phải trái để di chuyển slide</p>
     </div>
-    <div class="bg-danger-subtle">
+    <div class="bg-danger-subtle infoGame">
       <h3 style="text-align:center">Info</h3>
       <p style="text-align: center;"><b>Everlasting Star</b></p>
       <p>-<b>Giới thiệu</b>: Bắt đầu cuộc khám phá ở thế giới Stala</p>
