--- a/index.html
+++ b/index.html
@@ -91,25 +91,32 @@
     <section class="py-5 text-center">
       <div class="row">
         <div class="col-3">
+          <h2 class="reggae-one-regular" style="margin: 0px 50px 0 0;">Hu Tao</h2>
+          <p class="reggae-one-regular" style="margin: 0px 50px 0 0;">Game Assistant</p>
           <img src="img/bg/Picture1.png" alt="" width="90%" style="padding-top: 50px;">
-          <div class="btn-group">
-            <p class=" reggae-one-regular"><button onclick="RandomMusic()" id="musicBtn" type="button" class="btn btn-sm btn-dark" style="width: 100%; height: 75%; margin: 50px 50px 0 0;">Random Music</button></p>
+          <div class="">
+            <p class=" reggae-one-regular"><button onclick="ThrowADice()" id="musicBtn" type="button" class="btn btn-sm btn-dark" style="width: 50%; height: 60px; margin: 50px 50px 0 0;">Throw a dice</button></p>
+            <p class=" reggae-one-regular"><button onclick="FlipACoin()" id="musicBtn" type="button" class="btn btn-sm btn-dark" style="width: 50%; height: 60px; margin: 0px 50px 0 0;">Flip a coin</button></p>
           </div>
         </div>
         <div class="col">
           <h1 class="fw-light press-start">Kiga Games</h1> <br>
           <p class="lead text-y text-danger reggae-one-regular ">Red: Big Game</p>
           <p class="lead text-y text-info reggae-one-regular ">Blue: New Game</p>
-          <p class="lead text-y text-success reggae-one-regular ">Green: New Update</p>
-          <p class="lead text-y text-warning reggae-one-regular ">Yellow: Hot Game</p> <br>
+          <p class="lead text-y text-success reggae-one-regular ">Green: Updated Game</p>
+          <p class="lead text-y text-warning reggae-one-regular ">Yellow: Hot Game</p> 
+          <p class="lead text-y text reggae-one-regular ">Black: Casual Game</p> <br>
           <video width="100%"  autoplay muted>
             <source src="video/0311.mp4" type="video/mp4">
           </video>
         </div>
         <div class="col-3">
+          <h3 class="reggae-one-regular" style="margin: 0 0 0 50px;">Zero Two</h3>
+          <p class="reggae-one-regular" style="margin: 0px 0 0 50px;">Web Assistant</p>
           <img src="img/bg/Picture2.png" alt="" width="130%" style="padding-top: 50px;">
-          <div class="btn-group">
-            <p class=" reggae-one-regular"><button onclick="RandomGame()" type="button" class="btn btn-sm btn-danger" style="width: 130%; height: 75%; margin: 50px 0 0 10px;">Random Game</button></p>
+          <div class="">
+            <p class=" reggae-one-regular"><button onclick="RandomGame()" type="button" class="btn btn-sm btn-danger" style="width: 50%; height: 60px; margin: 50px 0 0 50px;">Random Game</button></p>
+            <p class=" reggae-one-regular"><button onclick="RandomMusic()" id="musicBtn" type="button" class="btn btn-sm btn-danger" style="width: 50%; height: 60px; margin: 0px 0px 0 50px;">Random Music</button></p>
           </div>
         </div>
       </div>
