--- a/index.html
+++ b/index.html
@@ -95,8 +95,8 @@
           <p class="reggae-one-regular" style="margin: 0px 50px 0 0;">Game Assistant</p>
           <img src="img/bg/Picture1.png" alt="" width="90%" style="padding-top: 50px;">
           <div class="">
-            <p class=" reggae-one-regular"><button onclick="ThrowADice()" id="musicBtn" type="button" class="btn btn-sm btn-dark" style="width: 50%; height: 60px; margin: 50px 50px 0 0;">Throw a dice</button></p>
-            <p class=" reggae-one-regular"><button onclick="FlipACoin()" id="musicBtn" type="button" class="btn btn-sm btn-dark" style="width: 50%; height: 60px; margin: 0px 50px 0 0;">Flip a coin</button></p>
+            <p class=" reggae-one-regular"><button onclick="ThrowADice()" type="button" class="btn btn-sm btn-dark" style="width: 50%; height: 60px; margin: 50px 50px 0 0;">Throw a dice</button></p>
+            <p class=" reggae-one-regular"><button onclick="FlipACoin()" type="button" class="btn btn-sm btn-dark" style="width: 50%; height: 60px; margin: 0px 50px 0 0;">Flip a coin</button></p>
           </div>
         </div>
         <div class="col">
