--- a/index.html
+++ b/index.html
@@ -69,13 +69,13 @@
 
           </div>
         </div>
-        <div class="carousel-item">
-          <img src="img/dontstop/Screenshot 02-10-2024 174104.jpg" class="d-block w-100 styleSlide" alt="...">
+        <div class="carousel-item active">
+          <img src="img/rareracing/Screenshot 09-11-2024 102916.jpg" class="d-block w-100 styleSlide" alt="...">
           <div class="carousel-caption d-none d-md-block">
 
           </div>
         </div>
-        <div class="carousel-item active">
+        <div class="carousel-item">
           <img src="img/chessk/Screenshot 06-10-2024 084503.jpg" class="d-block w-100 styleSlide" alt="...">
           <div class="carousel-caption d-none d-md-block">
 
@@ -136,6 +136,23 @@
                 <div class="d-flex justify-content-between align-items-center">
                   <div class="btn-group">
                     <a href="EverlastingStar.html"><button type="button" class="btn btn-sm btn-outline-secondary">View</button></a>
+                  </div>
+                  <small class="text-body-secondary">Free</small>
+                </div>
+              </div>
+            </div>
+          </div>
+
+          <div class="col">
+            <div class="card shadow-sm styleNew">
+              <img src="img/rareracing/Screenshot 09-11-2024 102916.jpg" height="225"> 
+              <div class="card-body">
+                <h3 class="text-info reggae-one-regular gameTitle">Rare Racing (Beta)</h3>
+                <p class="card-text"></p>
+                <div class="d-flex justify-content-between align-items-center">
+                  <div class="btn-group">
+                    <a href="RareRacing.html"><button type="button" class="btn btn-sm btn-outline-secondary">View</button></a>
+                    <a href="https://kiga-studio.itch.io/rare?secret=PFDtJCQQ4dXhSlOk0EDcKMA4o20" target="_blank"><button type="button" class="btn btn-sm btn-outline-secondary">Download</button></a>
                   </div>
                   <small class="text-body-secondary">Free</small>
                 </div>
